@@ -2,6 +2,8 @@ NEW IN VERSION 1.5
 
 - bug fix : trying to move a node above/below/before/after itself corrupted the
   internal state
+- add per-database dotlocking to prevent multiple processes accessing the same
+  database.  (Can be disabled with --disable-dotlock option to configure).
 
 NEW IN VERSION 1.4.2
 
@@ -118,4 +120,4 @@ NEW IN VERSION 0.7
 
 - Add tdlg to do log as a single command name.
 
-$Header: /cvs/src/tdl/NEWS,v 1.22.2.2 2004/01/06 23:42:59 richard Exp $
+$Header: /cvs/src/tdl/NEWS,v 1.22.2.3 2004/01/07 00:02:26 richard Exp $
